--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ if (NOT (Qt6_FOUND OR Qt5_FOUND))
 endif()
 
 
-qt5_add_resources(RESOURCES ./resources/resources.qrc)
+# qt5_add_resources(RESOURCES ./resources/resources.qrc)
 
 # Unfortunately, as we have a split include/src, AUTOMOC doesn't work.
 # We'll have to manually specify some files
@@ -70,6 +70,7 @@ set(CMAKE_AUTOMOC ON)
 file(GLOB_RECURSE CPP_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/nodes/internal/*.hpp)
 
+file(GLOB_RECURSE RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/*.qrc)
 # qt5_wrap_cpp(qan_source_files, qan_header_files)
 
 # set(CPP_SOURCE_FILES
